# Rust-Headset-Simulator

./: README.md
headset-sim/: Cargo.toml
headset-sim/src/: createMatrix.rs  main.rs
sample_data/: EEG_recording_2024-03-23-04.33.59.csv  EEG_recording_2024-03-23-04.34.42.csv  EEG_recording_2024-03-23-04.41.39.csv
