[package]
name = "batch_send_integers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "batch_send_integers"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
tungstenite = "=0.21.0"